--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,3 +26,17 @@ body {
 .main {
   padding: 2rem;
 }
+.form-filters {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 200px;
+
+}
+.country-list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1rem;
+  margin-top: 2rem;
+}
